hphp/hack/test/typecheck/array_append_vec_property_bad.php.exp
File "array_append_vec_property_bad.php", line 9, characters 3-18:
Invalid assignment (Typing[4110])
File "array_append_vec_property_bad.php", line 5, characters 14-16:
Expected int
File "array_append_vec_property_bad.php", line 9, characters 14-18:
But got string
